--- a/front/src/SCSS/ProjectDetail/ProjectDetailHeader.scss
+++ b/front/src/SCSS/ProjectDetail/ProjectDetailHeader.scss
@@ -3,7 +3,7 @@
 .header_image {
   margin: 10px 10px 5px 10px;
   border-radius: $round;
-  background-color: #b0b0b0;
+  background-color: #808080;
   position: relative;
   display: flex;
   align-items: center;
