--- a/front/src/SCSS/ProjectDetail/MemberList.scss
+++ b/front/src/SCSS/ProjectDetail/MemberList.scss
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     flex-direction: row;
+    margin-bottom: 0.5rem;
     .member_count {
       font-size: $fontMs;
       font-weight: $normal;
@@ -88,7 +89,6 @@
           border-radius: 2rem;
           color: white;
           font-size: $fontSs;
-          font-weight: $normal;
           text-align: center;
           background-color: #c4c4c4;
         }
