--- a/front/src/SCSS/Common/Chat/Chat.scss
+++ b/front/src/SCSS/Common/Chat/Chat.scss
@@ -189,7 +189,7 @@
       width: 100%;
       margin: 0 auto;
       color: white;
-      padding: 0.1rem;
+      padding: 0.3rem 0.1rem;
       background-color: $mainColor;
       cursor: pointer;
     }
@@ -221,7 +221,7 @@
       width: 100%;
       margin: 0 auto;
       color: white;
-      padding: 0.1rem;
+      padding: 0.2rem 0.1rem;
       background-color: $mainColor;
       cursor: pointer;
     }
