--- a/front/src/SCSS/MainPage/Cards.scss
+++ b/front/src/SCSS/MainPage/Cards.scss
@@ -1,6 +1,7 @@
 @import "../Base.scss";
 
 .cards {
+  position: relative;
   margin-right: 1.7rem;
   background-color: white;
   // background-color: pink;
@@ -13,6 +14,20 @@
   }
   transition: transform 0.2s;
   // min-width: 22rem;
+
+  .card__new-tag {
+    position: absolute;
+    right: 0.5rem;
+    top: 2rem;
+    background-color: $pointRed;
+    z-index: 1;
+    padding: 0.3rem 0.5rem;
+    color: white;
+    font-weight: $semiBold;
+    border-radius: 0.4rem;
+    font-size: $fontSs;
+  }
+
   .card__image {
     position: relative;
     border-radius: $round;
@@ -23,24 +38,25 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 1rem;
-    .card__new-tag {
-      position: absolute;
-      right: -0.7rem;
-      top: 0.7rem;
-      background-color: $pointRed;
-      z-index: 1;
-      padding: 0.3rem 0.5rem;
-      color: white;
-      font-weight: $semiBold;
-      border-radius: 0.4rem;
-      font-size: $fontSs;
-    }
+    overflow: hidden;
+
     img {
+      position: absolute;
       border-radius: $round;
       object-fit: cover; // 이미지 안찌그러지면서 꽉차게
       width: 100%;
       height: 100%;
+    }
+    img.card_img__small {
+      filter: blur(10px) brightness(50%);
+      transform: scale(1.1);
+      transition: all 0ms ease 400ms;
+      // -webkit-transition: -webkit-transform 2000ms ease-in-out 0ms;
+    }
+    img.card_img__full {
       filter: brightness(50%);
+      transition: all 400ms ease 0ms;
+      // -webkit-transition: opacity 2000ms ease-in-out 0ms;
     }
     .image__title {
       width: 18rem;
