--- a/front/src/SCSS/MainPage/DashCards.scss
+++ b/front/src/SCSS/MainPage/DashCards.scss
@@ -13,15 +13,16 @@
     justify-content: center;
     margin-bottom: 1rem;
     border-radius: $round;
-    background-color: #808080;
     width: 12rem;
     height: 8rem;
+    border: none;
     img {
       border-radius: $round;
       object-fit: cover;
       width: 100%;
       height: 100%;
       filter: brightness(50%);
+      -webkit-filter: brightness(50%);
     }
     .DashCards__title {
       position: absolute;
