--- a/front/src/SCSS/MainPage/Dashboard.scss
+++ b/front/src/SCSS/MainPage/Dashboard.scss
@@ -71,12 +71,18 @@
 .row2 {
   display: flex;
   padding: 0 2.5rem;
-  .row2__box1 {
-    display: flex;
+  height: 14rem;
+  .row2__box1-wrap {
     background-color: rgba(0, 0, 0, 0.53);
-    padding: 3rem;
     border-radius: $round;
+    padding: 3rem;
+    height: 100%;
+  }
+  .row2__box1 {
+    height: 100%;
+    display: flex;
     flex-grow: 0;
+    overflow: hidden;
     .box1__column1 {
       color: $mainColor;
       font-size: 1.3rem;
