--- a/front/src/SCSS/ProjectDetail/ProjectContent.scss
+++ b/front/src/SCSS/ProjectDetail/ProjectContent.scss
@@ -24,6 +24,7 @@
   .toastui-editor-contents {
     font-size: 1rem;
     font: inherit;
+    overflow-wrap: break-word;
   }
   .toastui-editor-contents h1 {
     border-bottom: 2px solid $lightestGrey !important;
