--- a/front/src/SCSS/ProjectDetail/ProjectInfo.scss
+++ b/front/src/SCSS/ProjectDetail/ProjectInfo.scss
@@ -8,7 +8,7 @@
   box-shadow: $shadow;
   border-radius: $round;
   background: white;
-
+  min-height: 10rem;
   hr {
     height: 1px;
     color: $lightGrey;
@@ -49,7 +49,6 @@
     img {
       margin: 5px 5px 0px 0px;
     }
-    padding-bottom: 5rem;
   }
   .info_bottom {
     display: flex;
