style: MainPage Project Loading Css

--- a/front/src/SCSS/MainPage/MainBody.scss
+++ b/front/src/SCSS/MainPage/MainBody.scss
@@ -3,6 +3,9 @@
 .recruit__wrap {
   max-width: 1440px;
   margin: 0 auto;
+  .loading-wrap {
+    height: 15rem;
+  }
 }
 .recruit {
   margin-bottom: 2rem;
