feat: #193 fix image Loading

--- a/front/src/SCSS/Base.scss
+++ b/front/src/SCSS/Base.scss
@@ -26,6 +26,7 @@ $shadowDeep: 0rem 0.3rem 0.3rem 0rem rgba(0, 0, 0, 0.25);
 $shadow: 0rem 0.3rem 0.3rem 0rem rgba(0, 0, 0, 0.1);
 
 $round: 0.7rem; //border-radius 통일
+// $semiRound: 0.4rem; // button 등 작은 요소들
 
 //페이지 상단 연두색 box 사이즈 (프로필 배너 등)
 
