--- a/front/src/SCSS/MainPage/CadetCards.scss
+++ b/front/src/SCSS/MainPage/CadetCards.scss
@@ -1,6 +1,6 @@
 @import "../Base.scss";
 .cadet-card {
-  width: 33%;
+  // width: 33%;
   margin: 0 1rem;
   background-color: white;
   box-shadow: $shadow;
