feat: #329 add main cadets, lounge concurrents

--- a/front/src/SCSS/LoungePage/LoungeBody.scss
+++ b/front/src/SCSS/LoungePage/LoungeBody.scss
@@ -89,7 +89,7 @@
       display: flex;
       align-items: center;
       margin-bottom: 0.5rem;
-
+      cursor: pointer;
       .connected__img {
         border-radius: 50%;
         width: 2rem;
