--- a/front/src/SCSS/MainPage/Cadet.scss
+++ b/front/src/SCSS/MainPage/Cadet.scss
@@ -8,6 +8,7 @@
     font-size: $fontMl;
     color: $black;
     padding-left: 4rem;
+    cursor: pointer;
   }
   .cadet__list {
     margin-top: 2rem;
