--- a/front/src/SCSS/MainPage/Lounge.scss
+++ b/front/src/SCSS/MainPage/Lounge.scss
@@ -8,6 +8,7 @@
     font-weight: $bold;
     font-size: $fontMl;
     color: $black;
+    cursor: pointer;
   }
   .lounge__list {
     padding-top: 2rem;
