feat: #347 front bug fix

--- a/front/src/SCSS/ProfilePage/ProfileBody.scss
+++ b/front/src/SCSS/ProfilePage/ProfileBody.scss
@@ -61,6 +61,11 @@
     img {
       margin: 0 0.2rem;
     }
+    .content__none {
+      font-size: $fontSs;
+      color: $lightGrey;
+      font-weight: 400;
+    }
   }
 
   .column2__job,
