--- a/front/src/SCSS/MainPage/CadetCards.scss
+++ b/front/src/SCSS/MainPage/CadetCards.scss
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  // justify-content: space-between;
   margin-bottom: 1.5rem;
   cursor: pointer;
   .cadet__image {
@@ -36,12 +37,29 @@
     font-size: $fontSm;
     font-weight: $semiBold;
   }
-  .cadet__word {
-    border: 1px solid $lightestGrey;
-    // box-shadow: $shadow;
-    border-radius: $round;
-    padding: 1rem;
-    text-align: center;
+  .cadet__word-wrap {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    .cadet__word {
+      border: 1px solid $lightestGrey;
+      // box-shadow: $shadow;
+      border-radius: $round;
+      padding: 1rem;
+      text-align: center;
+      // justify-content: center;
+      // align-items: center;
+      font-size: $fontSs;
+    }
+  }
+  .cadet__no-word {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto;
     font-size: $fontSs;
+    color: $grey;
+    flex: 1; // 남은 공간 채움
   }
 }
