--- a/front/src/SCSS/ProfilePage/ProfileHeader.scss
+++ b/front/src/SCSS/ProfilePage/ProfileHeader.scss
@@ -62,6 +62,11 @@
     position: relative;
     // border: none;
   }
+  .profile__bubble-none {
+    margin: 2rem 0 1rem 0;
+    color: $lightGrey;
+    font-size: $fontSs;
+  }
   textarea.profile__bubble {
     resize: none;
     border: 2px solid $mainColor;
@@ -137,7 +142,6 @@
     padding: 0.3rem 0.7rem;
     border-radius: 0.7rem;
     color: white;
-    // font-weight: $normal;
     margin-right: 1rem;
     border: none;
   }
@@ -178,6 +182,13 @@
     color: $lightGrey;
   }
 }
+
+.right__introduction-none {
+  padding: 0.2rem 0;
+  font-size: $fontSs;
+  color: $lightGrey;
+}
+
 textarea.introduction__textarea {
   width: 100%;
   min-height: 10rem;
