feat: #330 init all cadet page

--- a/front/src/SCSS/CadetPage/CadetTypeBar.scss
+++ b/front/src/SCSS/CadetPage/CadetTypeBar.scss
@@ -9,7 +9,7 @@
   padding-left: 1rem;
   padding-right: 1rem;
   margin-top: 1rem;
-
+  min-width: max-content;
   .cadet-bar-column1 {
     display: flex;
     align-items: center;
