--- a/front/src/SCSS/Common/Chat/Chat.scss
+++ b/front/src/SCSS/Common/Chat/Chat.scss
@@ -117,10 +117,8 @@
       }
     }
   }
-
   .chatLog__addConv {
     background-color: $lightestGrey;
-    margin-bottom: 0.5rem;
     font-weight: $normal;
     padding: 0.5rem 1rem;
     border-radius: 0.7rem;
@@ -128,24 +126,12 @@
     width: 100%;
     align-items: center;
     position: relative;
-    overflow: hidden;
+    overflow-x: scroll;
+    &::-webkit-scrollbar {
+      display: none; /* Chrome, Safari, Opera*/
+    }
     .addConv__placeholder {
       min-width: max-content;
-    }
-    .userNameList {
-      display: flex;
-      margin-left: 0.2rem;
-      .userNameCard {
-        display: flex;
-        margin-right: 0.4rem;
-        background-color: white;
-        padding: 0.1rem;
-        align-items: center;
-        position: relative;
-        .textCard-userName {
-          margin: 0 0.4rem;
-        }
-      }
     }
     .addConv__input {
       background-color: $lightestGrey;
@@ -157,12 +143,20 @@
         outline: none;
       }
     }
+    .create-icon {
+      opacity: 0.5;
+      &:hover {
+        opacity: 1;
+        color: $mainColor;
+      }
+    }
   }
   .chatLog__addUser-big {
     width: 77.8vw;
-    position: absolute;
-    top: 6.3rem;
     background-color: white;
+    max-height: 20rem;
+    overflow-y: scroll;
+    border-radius: $round;
     .addUser__card {
       display: flex;
       align-items: center;
@@ -182,22 +176,15 @@
         font-size: $fontMs;
       }
     }
-    .chat-create {
-      display: flex;
-      justify-content: center;
-      width: 100%;
-      margin: 0 auto;
-      color: white;
-      padding: 0.3rem 0.1rem;
-      background-color: $mainColor;
-      cursor: pointer;
-    }
   }
   .chatLog__addUser {
     width: 20rem;
-    position: absolute;
-    top: 6rem;
+    // position: absolute;
     background-color: white;
+    max-height: 10rem;
+    overflow-y: scroll;
+    border-radius: $round;
+
     .addUser__card {
       display: flex;
       align-items: center;
@@ -213,16 +200,6 @@
         object-fit: cover;
         margin-right: 0.5rem;
       }
-    }
-    .chat-create {
-      display: flex;
-      justify-content: center;
-      width: 100%;
-      margin: 0 auto;
-      color: white;
-      padding: 0.2rem 0.1rem;
-      background-color: $mainColor;
-      cursor: pointer;
     }
   }
   .chatLog__body {
