feat: #377 add favicon, desc

--- a/front/src/SCSS/ProjectEditPage/ProjectEditPage.scss
+++ b/front/src/SCSS/ProjectEditPage/ProjectEditPage.scss
@@ -22,7 +22,7 @@
   button {
     padding: 0.5rem 1rem;
     border-radius: $round;
-    border: 2px solid $lightGrey;
+    // border: 2px solid $lightGrey;
     background-color: white;
     color: $grey;
     min-width: max-content;
