--- a/front/src/SCSS/init.scss
+++ b/front/src/SCSS/init.scss
@@ -1,5 +1,15 @@
 @import "./Base.scss";
 
+@font-face {
+  font-family: "AppleSDGothicNeo";
+  font-weight: 400;
+  src: url("../fonts/AppleSDGothicNeoL.ttf");
+}
+
+// @font-face {
+//   font-family:
+// }
+
 body {
   font-family: "Nunito Sans", sans-serif;
   margin: 0.5rem 1rem;
