--- a/front/src/SCSS/Common/Chat/ChatCard.scss
+++ b/front/src/SCSS/Common/Chat/ChatCard.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   position: relative;
+  margin: 0.2rem 0;
   .chatCard__column1 {
     margin: 0 0.5rem;
     img {
@@ -31,11 +32,13 @@
       box-shadow: 0rem 0.3rem 0.3rem 0rem rgba(0, 0, 0, 0.05);
       border-radius: $round;
       background-color: white;
+      line-height: 120%;
+      word-break: break-all;
     }
   }
 }
 .chatCard-me {
-  margin: 0.5rem 0;
+  margin: 0.2rem 0;
   display: flex;
   align-items: center;
   position: relative;
@@ -67,6 +70,8 @@
       box-shadow: 0rem 0.3rem 0.3rem 0rem rgba(0, 0, 0, 0.05);
       border-radius: $round;
       background-color: white;
+      line-height: 120%;
+      word-break: break-all;
     }
   }
 }
