--- a/front/src/SCSS/Common/Chat/ChatRoom.scss
+++ b/front/src/SCSS/Common/Chat/ChatRoom.scss
@@ -9,7 +9,7 @@
   border-radius: $round;
   border: 1px solid $lightestGrey;
   margin: 0.5rem 0;
-
+  min-height: 5rem;
   &:hover {
     background-color: $bodyColor;
     cursor: pointer;
@@ -48,7 +48,7 @@
   justify-content: space-between;
   align-items: center;
   .chatRoom__bubble {
-    margin-top: 0.5rem;
+    margin-top: 0.1rem;
   }
   .chatRoom__unread {
     width: 1.2rem;
