style: #419 Fix chat style

--- a/front/src/SCSS/Common/Chat/InChat.scss
+++ b/front/src/SCSS/Common/Chat/InChat.scss
@@ -73,7 +73,10 @@
     height: 80%;
     overflow-y: scroll;
     overflow-x: hidden;
-    .empty {
+    .empty-msg {
+      padding: 1.5rem 0;
+    }
+    .empty-msg-bottom {
       padding: 0.5rem 0;
     }
   }
