feat: #354 add AppleSDGothic font

--- a/front/src/SCSS/Base.scss
+++ b/front/src/SCSS/Base.scss
@@ -9,10 +9,12 @@ $lightestGrey: #e5e5e5;
 $lightGrey: #c4c4c4;
 $pointRed: #ff6864;
 $pointBlue: #5bbcb6;
-//font-weight
+//font-weight 기본:400
 $bold: 800;
 $semiBold: 700;
 $normal: 600;
+$regular: 500;
+$thin: 400;
 //페이지 전체 margin 기준
 $fontXXl: 3rem; //36px
 $fontXl: 2.5rem; //30px
