--- a/front/src/SCSS/MainPage/Lounge.scss
+++ b/front/src/SCSS/MainPage/Lounge.scss
@@ -53,6 +53,7 @@
       .card__row2 {
         padding-left: 3.5rem;
         margin-bottom: 1rem;
+        line-height: 120%;
       }
       .card__row3 {
         position: absolute;
