--- a/front/src/SCSS/MainPage/Dashboard.scss
+++ b/front/src/SCSS/MainPage/Dashboard.scss
@@ -7,7 +7,6 @@
   margin-left: calc(-50vw + 50%);
   // border-radius: $round;
   margin-bottom: 3rem;
-  // background-image: url(https://fiverr-res.cloudinary.com/images/q_auto,f_auto/gigs/109852763/original/cf07bcfb468b2823d537812be8f1640754794433/create-trendy-abstract-geometric-pattern-on-light-background.jpg);
   // background-image: url(https://cdn.pixabay.com/photo/2018/04/04/14/34/design-3289964_960_720.png);
   // background-size: cover;
   background: linear-gradient(
@@ -15,7 +14,8 @@
       rgba(167, 188, 91, 0.95),
       rgba(167, 188, 91, 0.95)
     ),
-    url(https://cdn.pixabay.com/photo/2018/04/04/14/34/design-3289964_960_720.png);
+    // url(https://cdn.pixabay.com/photo/2018/04/04/14/34/design-3289964_960_720.png);
+    url(../../dashboardImg.png);
   // box-shadow:inset 0 0 0 2000px rgba(167, 188 ,91, 0.95);
   box-shadow: 0rem 0.5rem 0.5rem 0rem rgba(0, 0, 0, 0.1);
   .dashboard__wrap {
