--- a/front/src/SCSS/ProfilePage/ProfileBody.scss
+++ b/front/src/SCSS/ProfilePage/ProfileBody.scss
@@ -57,6 +57,11 @@
   min-width: 50%;
   display: flex;
   align-items: flex-start;
+  input.skill__content {
+    &::placeholder {
+      font-size: $fontSs;
+    }
+  }
   .skill__content {
     img {
       margin: 0 0.2rem;
