feat: #432 add cadet bubble

--- a/front/src/SCSS/AllProjectPage/ProjectTypeBar.scss
+++ b/front/src/SCSS/AllProjectPage/ProjectTypeBar.scss
@@ -68,7 +68,7 @@
   border: none;
   background-color: $mainColor;
   color: white;
-  font-weight: $normal;
+  font-weight: $regular;
   margin: 0 1rem;
   cursor: pointer;
   &:hover {
