--- a/front/src/SCSS/LoungePage/LoungeWrite.scss
+++ b/front/src/SCSS/LoungePage/LoungeWrite.scss
@@ -4,10 +4,10 @@
   background-color: white;
   box-shadow: $shadow;
   width: 100%;
-  height: 16rem;
+  height: 15rem;
   border-radius: $round;
   margin-bottom: 2rem;
-  padding: 2rem;
+  padding: 1.5rem 2rem;
 
   display: flex;
   flex-direction: column;
@@ -48,7 +48,9 @@
 }
 textarea.lounge-write__box {
   resize: none;
+  // min-height: 8rem;
   padding: 1rem;
+  line-height: 120%;
 }
 
 .lounge-write__submit {
