--- a/front/src/SCSS/ProjectEditPage/Modal.scss
+++ b/front/src/SCSS/ProjectEditPage/Modal.scss
@@ -32,13 +32,20 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    background-color: $mainColor;
+    border-bottom-left-radius: $round;
+    border-bottom-right-radius: $round;
     div {
       width: 100%;
       padding: 1rem;
       cursor: pointer;
+      color: white;
+      font-weight: $regular;
     }
     div:nth-child(2) {
-      border-left: 1px solid rgba(86, 86, 86, 0.25);
+      // border-left: 1px solid white;
+      background-color: $pointRed;
+      border-bottom-right-radius: $round;
     }
   }
 }
